- fixing the shifting item action

--- a/src/Views/ProductListView/style.scss
+++ b/src/Views/ProductListView/style.scss
@@ -143,6 +143,7 @@
 }
 
 .returnIcon {
+  padding: 3px;
   transform: scaleX(-1);
 }
 
